# pizzasql

./: API.md  IMPLEMENTATION_PLAN.md  ISSUES.md  Makefile  README.md  TEST.md  go.mod  main.go  sql-92.bnf  stress_test.js  test_distinct.js  test_distinct_simple.js
clients/: README.md
clients/go/: README.md  go.mod  pizzasql.go
clients/js/: README.md  index.ts  package.json
clients/python/: README.md  pizzasql.py  pyproject.toml
clients/ruby/: README.md  pizzasql.gemspec
clients/ruby/lib/: pizzasql.rb
pkg/analyzer/: analyzer.go  analyzer_test.go  scope.go  types.go
pkg/csvexport/: export.go
pkg/csvimport/: import.go
pkg/executor/: executor.go  executor_join_test.go  executor_test.go  result.go
pkg/httpserver/: handler.go  middleware.go  response.go  server.go  server_test.go
pkg/lexer/: lexer.go  lexer_test.go  token.go
pkg/parser/: ast.go  errors.go  parser.go  parser_test.go
pkg/sqlexport/: export.go
pkg/sqlimport/: import.go
pkg/storage/: db_manager.go  kv.go  schema.go  table.go
