[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pizzasql"
version = "0.1.0"
description = "PizzaSQL client for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["pizzasql", "database", "sql", "client"]

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/danfragoso/pizzasql"
Documentation = "https://github.com/danfragoso/pizzasql/tree/main/clients/python"
